# Cupid

./: .env.example  .gitignore  README.md  database.py  docker-compose.yml  embeddings.py  main.py  models.py  pyproject.toml  reranker.py  routes.py
app/: main.py
app/api/: profiles.py
app/models/: schemas.py
app/observability/: __init__.py
app/observability/langfuse/: client.py
app/services/: database.py  embeddings.py  query_optimizer.py  reranker.py
front/: index.html  package-lock.json  package.json  tsconfig.json
front/src/: App.vue
front/src/api/: index.ts
front/src/router/: index.ts
front/src/types/: api.ts
front/src/views/: CreateProfile.vue  Home.vue  NaturalSearch.vue  StructuredSearch.vue
test/: generate_users.py  import_users.py  user_data.json
