[project]
name = "cupid"
version = "0.1.0"
description = "婚恋交友用户资料后台服务"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langfuse>=4.14.0",
]
